Ensure menu button is always in top right corner
Previously, on small viewports, the menu button in the top bar would
wrap onto the second line with the tab buttons. This reduced the space
available for the tab buttons and broke the symmetry of the layout.

The commit therefore updates the top bar layout to keep the menu button
in the top right corner at all times. The easiest way to achieve this
was to switch to using a CSS grid layout instead of Flexbox. This means
that the top bar will look slightly broken in Internet Explorer but it
should look fine in modern browsers.

--- a/src/Buttercup.Web/styles/top-bar.less
+++ b/src/Buttercup.Web/styles/top-bar.less
@@ -5,26 +5,22 @@
 @top-bar-focus-border-width: 2px;
 
 .top-bar {
+  background-color: @color-blue;
   margin: 0 -@padding;
 }
 
 .top-bar__content {
-  align-items: stretch;
-  display: flex;
-  flex-direction: column;
+  display: grid;
+  grid-template-columns: @top-bar-height auto @top-bar-height;
   margin: 0 auto;
   max-width: @max-width + (2 * @padding);
 }
 
 .top-bar__home-button {
-  background-color: @color-blue;
+  grid-area: 1 / 2;
+  justify-self: center;
   min-height: @top-bar-height - (2 * @top-bar-focus-border-width);
-  text-align: center;
-
-  &:active,
-  &:hover {
-    background-color: lighten(@color-blue, 5%);
-  }
+  padding: 0 (@padding - @top-bar-focus-border-width);
 }
 
 .top-bar__logotype {
@@ -35,33 +31,30 @@
 }
 
 .top-bar__tabs {
+  background-color: @color-white;
   border: solid @top-bar-border-color-2;
   border-width: 0 0 @top-bar-border-width 0;
-  display: flex;
+  display: grid;
+  grid-area: 2 / 1 / 3 / -1;
+  grid-template-columns: 50% 50%;
   list-style: none;
   margin: 0;
+  min-height: @top-bar-height - @top-bar-border-width;
   padding: 0;
 }
 
 .top-bar__tab-item {
   border-left: @top-bar-border-width solid @top-bar-border-color-2;
-  flex-grow: 1;
-  text-align: center;
 
   &:first-child {
-    border-width: 0;
-  }
-
-  &.top-bar__tab-item--fixed-size {
-    flex-grow: 0;
+    border-left-width: 0;
   }
 }
 
 .top-bar__tab {
-  background-color: transparent;
   display: block;
   line-height: @top-bar-height - @top-bar-border-width - (2 * @top-bar-focus-border-width);
-  padding: 0 @padding;
+  padding: 0 1em;
 
   &:active,
   &:hover,
@@ -70,21 +63,16 @@
   }
 }
 
-.top-bar__home-button,
-.top-bar__tab {
-  border: @top-bar-focus-border-width solid transparent;
-  padding: 0 (@padding - @top-bar-focus-border-width);
-
-  &:focus {
-    border-color: @color-orange;
-    outline: 0;
-  }
-}
-
 #top-bar__menu-button {
+  color: @color-white;
   font-size: 18px;
   font-weight: bold;
+  grid-area: 1 / 3;
   width: @top-bar-height;
+}
+
+#top-bar__menu-popover {
+  border-top: 0;
 }
 
 .top-bar__user {
@@ -96,26 +84,55 @@
   margin: 0.3em 0;
 }
 
+.top-bar__home-button,
+#top-bar__menu-button {
+  &:active,
+  &:hover,
+  &[aria-expanded='true'] {
+    background-color: lighten(@color-blue, 5%);
+  }
+}
+
+.top-bar__home-button,
+#top-bar__menu-button,
+.top-bar__tab {
+  background-color: transparent;
+  border: @top-bar-focus-border-width solid transparent;
+  text-align: center;
+
+  &:focus {
+    border-color: @color-orange;
+    outline: 0;
+  }
+}
+
 @media (min-width : 440px) {
-  .top-bar {
-    background-color: @color-blue;
+  .top-bar__content {
+    grid-template-columns: auto auto @top-bar-height;
   }
 
-  .top-bar__content {
-    flex-direction: row;
-    justify-content: space-between;
+  .top-bar__home-button {
+    grid-area: 1 / 1;
+    justify-self: start;
   }
 
   .top-bar__tabs {
+    background-color: transparent;
     border-color: @top-bar-border-color-1;
-    border-width: 0 @top-bar-border-width;
-    flex-grow: 1;
-    margin: 0 @padding;
-    max-width: 340px;
+    border-width: 0 @top-bar-border-width 0 0;
+    display: flex;
+    grid-area: 1 / 2;
+    justify-content: flex-end;
+    margin-left: @padding;
+    min-height: @top-bar-height;
   }
 
   .top-bar__tab-item {
     border-color: @top-bar-border-color-1;
+
+    &:first-child {
+      border-left-width: @top-bar-border-width;
+    }
   }
 
   .top-bar__tab {
@@ -127,9 +144,5 @@
     &[aria-expanded='true'] {
       background-color: lighten(@color-blue, 5%);
     }
-  }
-
-  #top-bar__menu-popover {
-    border-top: 0;
   }
 }
